apps/base/home-assistant/home-assistant.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant-system
  labels:
    networking.tinyrack.net/isolation: enabled
