apps/base/home-assistant/home-assistant.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant-system
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - name: http
      port: 8123
      targetPort: http
      protocol: TCP
