apps/base/home-assistant/zigbee2mqtt.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: home-assistant-system
spec:
  type: ClusterIP
  selector:
    app: zigbee2mqtt
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
