apps/base/home-assistant/home-assistant.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
    - cloudflare
  routes:
    - match: Host(`home-assistant.winetree94.com`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: letsencrypt-cert
