apps/base/home-assistant/zigbee2mqtt.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt
  namespace: home-assistant-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zigbee.intranet.winetree94.com`)
      kind: Rule
      services:
        - name: zigbee2mqtt
          port: 8080
  tls:
    secretName: letsencrypt-cert
