apps/base/home-assistant/home-assistant.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: app-home-assistant
  namespace: home-assistant-system
specs:
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: home-assistant-system
        app: home-assistant
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: traefik-external-system
              app.kubernetes.io/name: traefik
        toPorts:
          - ports:
              - port: "8123"
                protocol: TCP
      - fromCIDRSet:
          - cidrGroupRef: lan
        toPorts:
          - ports:
              - port: "8123"
                protocol: TCP
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: kube-system
              k8s-app: kube-dns
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
      - toEntities:
          - world
        toPorts:
          - ports:
              - port: "80"
                protocol: TCP
              - port: "443"
                protocol: TCP
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: traefik-external-system
              app.kubernetes.io/name: traefik
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
      - toCIDRSet:
          - cidrGroupRef: lan
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: home-assistant-system
              app: mosquitto
        toPorts:
          - ports:
              - port: "1883"
                protocol: TCP
