apps/base/home-assistant/zigbee2mqtt.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: app-zigbee2mqtt
  namespace: home-assistant-system
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      k8s:io.kubernetes.pod.namespace: home-assistant-system
      app: zigbee2mqtt
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik-system
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: home-assistant-system
            app: mosquitto
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
    # Zigbee coordinator TCP serial bridge.
    - toCIDRSet:
        - cidrGroupRef: slzb-ultima3
      toPorts:
        - ports:
            - port: "6638"
              protocol: TCP # SLZB-Ultima3 serial over TCP
